@@ -164,6 +164,9 @@ Release 2.8.0 - UNRELEASED
     YARN-3873. PendingApplications in LeafQueue should also use OrderingPolicy. 
     (Sunil G via wangda)
 
+    YARN-3887. Support changing Application priority during runtime. (Sunil G
+    via jianhe)
+
   IMPROVEMENTS
 
     YARN-644. Basic null check is not performed on passed in arguments before
